--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,11 @@ flutter:
 
   assets:
     - assets/img/
+
+  fonts:
+    - family: BalooThambi2
+      fonts:
+        - asset: assets/fonts/BalooThambi2-VariableFont_wght.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
