--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,9 +67,18 @@ flutter:
     - assets/img/
 
   fonts:
-    - family: BalooThambi2
+    - family: CLOZii_BalooThambi2
       fonts:
-        - asset: assets/fonts/BalooThambi2-VariableFont_wght.ttf
+        - asset: assets/fonts/BalooThambi2-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/BalooThambi2-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/BalooThambi2-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/BalooThambi2-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/BalooThambi2-ExtraBold.ttf
+          weight: 800
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
