feat(model): PostDraft 및 Post 모델 추가
- PostDraft: 게시글 작성 중 임시 데이터 저장용 (제목, 내용, XFile 이미지, 가격, 거래 유형)
- Post: 최종 게시글 모델, 불변 필드 포함 (id, 제목, 내용, 이미지 URL, 가격, 생성/수정 시각, 거래 유형)
- Post에 copyWith 메서드 추가로 불변 객체 업데이트 편의성 제공

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_map: ^8.2.1
   latlong2: ^0.9.1
   geolocator: ^14.0.2
+  image_picker: ^1.2.0
 
 dev_dependencies:
   flutter_test:
