--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   latlong2: ^0.9.1
   geolocator: ^14.0.2
   image_picker: ^1.2.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
