--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   geolocator: ^14.0.2
   image_picker: ^1.2.0
   intl: ^0.20.2
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
