--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <!-- ✅추가 -->
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDgrIuXiYkGyUyVaukA7mXwCvPUaE--uFM"/>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
