--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_map: ^8.2.1
   latlong2: ^0.9.1
   geolocator: ^14.0.2
+  google_maps_flutter: 2.12.3
   image_picker: ^1.2.0
   intl: ^0.20.2
   http: ^1.5.0
